--- a/public/index.html
+++ b/public/index.html
@@ -2,13 +2,21 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
-    <link rel="icon" href="/src/asset/icon-cropped.jpg" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
     <meta
       name="description"
       content="Web site created using create-react-app"
     />
+
+    <link rel="shortcut icon" href="/src/asset/icon-128x128.png" />
+    <link rel="manifest" href="mainfest.json" />
+    <link rel="apple-touch-icon" href="/src/asset/icon-512x512.png" />
+    <meta name="apple-mobile-web-app-capable" content="yes" />
+    <meta name="apple-mobile-web-app-status-bar-style" content="black" />
+    <meta name="apple-mobile-web-app-title" content="Lists PWA" />
+    <meta name="theme-color" content="#39c16c" />
+    <meta name="description" content="Lists PWA with React" />
     <!--
       manifest.json provides metadata used when your web app is installed on a
       user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
